force-app/main/default/objects/Residential_Commission__c/Residential_Commission__c.object-meta.xml
<CustomObject>
    <label>Residential Commission</label>
    <nameField>
        <displayFormat>RC-{000000000}</displayFormat>
        <label>Residential Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Residential Commission</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>