force-app/main/default/objects/Residential_Commission__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Commission</relationshipLabel>
    <relationshipName>Residential_Commission</relationshipName>
    <type>Lookup</type>
</CustomField>