force-app/main/default/objects/Residential_Commission__c/fields/Receiver_Type__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Type__c</fullName>
    <label>Receiver Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>