force-app/main/default/objects/Residential_Commission__c/fields/Residential_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Residential_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residential Opportunity</label>
    <referenceTo>Residential_Opportunity__c</referenceTo>
    <relationshipLabel>Residential Commission</relationshipLabel>
    <relationshipName>Residential_Commission</relationshipName>
    <type>Lookup</type>
</CustomField>