force-app/main/default/objects/Residential_Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Receiver__c</columns>
    <columns>Receiver_Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>